[package]
author = "Anton Aparin"
name = "web-crawler"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
colored = "2.0.0"
reqwest = {version = "0.11.13", features = ["blocking"]}
tl = "0.7.7"
url = "2.3.1"
swing = "0.1"
log = "0.4"