[package]
author = "Anton Aparin"
name = "web-crawler"
version = "0.1.2"
edition = "2021"
description = "Finds every page, image, and script on a website (and downloads it)"
license = "MIT" # Doesn't really matter
repository = "https://github.com/Antosser/web-crawler"
documentation = "https://github.com/Antosser/web-crawler#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
reqwest = {version = "0.12.7", features = ["blocking"]}
tl = "0.7.8"
url = "2.5.2"
log = "0.4"
env_logger = "0.10.2"
